2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'glassplayerhost-fastembed.spec.in' that broke
	web password database initialization.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'glassplayerhost-fastembed.spec.in' that broke
	package of the Java scripts.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Removed the error check for an empty StreamUrl value in
	'src/glassplayerhost/glassplayerhost.cpp'.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Updated the webhost version to 0.8.3.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.0.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a logo in 'src/web/logo.png'.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.1.
2016-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Implemented firmware updates via the web interface.
2016-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed an HTML validation error in 'src/web/systempage.cpp'.
	* Incremented the webhost version to 0.8.4.
2016-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.2.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the GlassPlayer version to 0.6.2.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a 'System Name' parameter in the web interface on
	the 'System' page.
	* Added a 'MAC Address' field on the 'Player' page.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the webhost version to 0.8.5.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2016-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the webhost version to 0.8.7.
2016-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the webhost version to 0.8.8.
2016-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.