@@ -55,3 +55,5 @@
 	* Incremented the webhost version to 0.8.8.
 2016-02-03 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.6.1.
+2016-02-16 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the glassplayer version to 0.6.4.
